Fixed image gap when in moblie view

--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ body {
     background-position: center;
     background-repeat:no-repeat;
 }
+body{
+    height: 900px;
+}
 li{
     list-style: none
 }
